--- a/index.html
+++ b/index.html
@@ -6,8 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="icon" href="image/download.png"/>
+    <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
-    
+    <section class="main-body">
+        <input type="text" class="inputt" id="display"/>
+        <section id="calculator-body" class="cal-body">
+            <div class="row">
+                <div class="btn">^</div>
+                <div class="btn">%</div>
+                <div class="btn">DC</div>
+                <div class="btn">AC</div>
+            </div>
+            <div class="row">
+                <div class="btn">7</div>
+                <div class="btn">8</div>
+                <div class="btn">9</div>
+                <div class="btn">+</div>
+            </div>
+            <div class="row">
+                <div class="btn">4</div>
+                <div class="btn">5</div>
+                <div class="btn">6</div>
+                <div class="btn">-</div>
+            </div>
+            <div class="row">
+                <div class="btn">1</div>
+                <div class="btn">2</div>
+                <div class="btn">3</div>
+                <div class="btn">*</div>
+            </div>
+            <div class="row">
+                <div class="btn">0</div>
+                <div class="btn">.</div>
+                <div class="btn">=</div>
+                <div class="btn">/</div>
+            </div>
+        </section>
+    </section>
 </body>
+<script src="js/index.js"></script>
 </html>
