--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
         <input type="text" class="inputt" id="display"/>
         <section id="calculator-body" class="cal-body">
             <div class="row">
-                <div class="btn">^</div>
-                <div class="btn">%</div>
-                <div class="btn">DC</div>
-                <div class="btn">AC</div>
+                <div class="btn operator">^</div>
+                <div class="btn operator">%</div>
+                <div class="btn operator">DC</div>
+                <div class="btn operator">AC</div>
             </div>
             <div class="row">
                 <div class="btn">7</div>
                 <div class="btn">8</div>
                 <div class="btn">9</div>
-                <div class="btn">+</div>
+                <div class="btn operator">+</div>
             </div>
             <div class="row">
                 <div class="btn">4</div>
                 <div class="btn">5</div>
                 <div class="btn">6</div>
-                <div class="btn">-</div>
+                <div class="btn operator">-</div>
             </div>
             <div class="row">
                 <div class="btn">1</div>
                 <div class="btn">2</div>
                 <div class="btn">3</div>
-                <div class="btn">*</div>
+                <div class="btn operator">*</div>
             </div>
             <div class="row">
                 <div class="btn">0</div>
                 <div class="btn">.</div>
-                <div class="btn">=</div>
-                <div class="btn">/</div>
+                <div class="btn operator">=</div>
+                <div class="btn operator">/</div>
             </div>
         </section>
     </section>
