--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" class="inputt" id="display"/>
         <section id="calculator-body" class="cal-body">
             <div class="row">
-                <div class="btn operator">^</div>
+                <div class="btn ">00</div>
                 <div class="btn operator">%</div>
                 <div class="btn operator">DC</div>
                 <div class="btn operator">AC</div>
