--- a/index.html
+++ b/index.html
@@ -5,37 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <!--fav icon-->
     <link rel="icon" href="image/download.png"/>
+    <!--css link-->
     <link rel="stylesheet" href="style/style.css"/>
 </head>
 <body>
+    <!--main body-->
     <section class="main-body">
+        <!--display input-->
         <input type="text" class="inputt" id="display"/>
+        <!--calculator body-->
         <section id="calculator-body" class="cal-body">
+            <!--row part-->
             <div class="row">
                 <div class="btn ">00</div>
                 <div class="btn operator">%</div>
                 <div class="btn operator">DC</div>
                 <div class="btn operator">AC</div>
             </div>
+            <!--row part-->
             <div class="row">
                 <div class="btn">7</div>
                 <div class="btn">8</div>
                 <div class="btn">9</div>
                 <div class="btn operator">+</div>
             </div>
+            <!--row part-->
             <div class="row">
                 <div class="btn">4</div>
                 <div class="btn">5</div>
                 <div class="btn">6</div>
                 <div class="btn operator">-</div>
             </div>
+            <!--row part-->
             <div class="row">
                 <div class="btn">1</div>
                 <div class="btn">2</div>
                 <div class="btn">3</div>
                 <div class="btn operator">*</div>
             </div>
+            <!--row part-->
             <div class="row">
                 <div class="btn">0</div>
                 <div class="btn">.</div>
@@ -45,5 +55,6 @@
         </section>
     </section>
 </body>
+<!--js link-->
 <script src="js/index.js"></script>
 </html>
